# razor

./: .gitignore  AGENTS.md  CHANGELOG  CONTRIBUTORS.md  MODULES.md  Makefile.am  README.md  SConstruct  configure.ac  nested.s  sdltest.s  test_cmp.occ  test_fp_simple  test_if.occ  test_int.occ  test_int.s  test_int_size.occ  test_int_size.s  test_lit.occ  test_lit2.occ  test_malloc  test_malloc.c  test_pattern  test_size.c  test_slots.occ  test_vs  test_vs.occ  test_word  test_word.c  update-agent-context-links.sh
.amazonq/old-rules/: ccsp-aarch64.md
.amazonq/rules/: flags-investigation.md  memory-corruption-investigation.md  overview.md  testing-procedures.md  testing.md  tranx86-tasks.md
.junie/: guidelines.md  symbol-naming-summary.md
ai/: analysis-standard-calling-convention.md  build.md  ccsp.md  cif.md  guidelines.md  occ21-summary.md  occbuild.md  restructure-proposal.md  skiptest.md  testing-procedures.md  tranx86.md  x64-port-plan.md  x64-port-status.md
ai/Amazon Q Junk/: aarch64_init.c  aarch64_simple_runtime.c  archaarch64_fixed.c  ccsp_aarch64_breakthrough_summary.md  ccsp_calling_convention_fix_summary.md  ccsp_main.c  chan_test.occ  channel_operations_fix_status.md  complete_stub.c  debug_channel_fix.lldb  debug_cparam.lldb  debug_cparam2.lldb  debug_cparam_offset.lldb  debug_cregs.lldb  debug_entry.lldb  debug_h_fixed.lldb  debug_hello.lldb  debug_main_params.lldb  debug_mem.lldb  debug_offset8.lldb  debug_param_test.lldb  debug_regs.lldb  debug_runtime.lldb  debug_sched.lldb  debug_stack.lldb  debug_test.lldb  debug_tranx86.lldb  debug_workspace_fix.lldb  debug_wptr1.lldb  debug_wptr1_fixed.lldb  fix_aarch64_channel_calls.patch  h  h_channel_fix  h_debug_init  h_entry_fix  h_final  h_fixed  h_forced_wptr  h_test  h_test8  (+21 more)
ai/Amazon Q Junk/aarch64/: aarch64_minimal_runtime.c  aarch64_runtime.c  ccsp_main_aarch64.c  kernel_stubs_aarch64.c  kiface_aarch64.c  kiface_aarch64_minimal.c  kroc_workspace.c  main_entry_aarch64.c  simple_io_handler.c  simple_main.c  workspace_init.c
ai/Amazon Q Junk/debug_param/: h.occ
ai/bugs/: fix.md  fixes.md  inline-int64-function-result-bug.md  reg-alloc-bug.md
ai/history-64-bit/: 64BIT_SUPPORT.md  aarch64_test_results.md  fix-tranx86-sdltest.md  workspace_pointer_fix_summary.md
build-tools/mkoccdeps/: configure.ac
build-tools/occamdoc/: occamdoc.in
build-tools/plinker/: build.pl.in  configure.ac
build-tools/slinker/: SConscript  configure.ac
compiler/occ21/: Makefile.am
compiler/occ21/arglib/: arg.c
contrib/moa/examples/: Makefile.am  configure.ac
contrib/skroc/: configure.ac  skroc.ss
demos/bar/: Makefile.am
demos/game/: Makefile.am
demos/robots/: Makefile.am
demos/shootout/: Makefile.am  configure.ac
demos/ttygames/: configure.ac
doc/: configure.ac
docs/: install-kroc.html
docs/api/: Makefile.am
m4/: kroc.m4  occam-cuda.m4  occam-opengl.m4  occam-sdl.m4  occbuild.m4  tvm.m4
modules/bsclib/examples/: Makefile.am  configure.ac
modules/cif/: AGENTS.md
modules/course/examples/: Makefile.am
modules/ioport/libsrc/: configure.ac
modules/occGL/examples/: Makefile.am
modules/occSDL/examples/: Makefile.am
modules/ocuda/examples/: Makefile.am
modules/random/examples/: Makefile.am
modules/raster/examples/: Makefile.am
modules/trap/examples/: Makefile.am  configure.ac
modules/udc/examples/: Makefile.am  configure.ac
modules/video/examples/: Makefile.am  configure.ac
packaging/deb-pkg/: config.py  make-deb-pkg.py
packaging/debian/: control  copyright
packaging/osx/: build_arduino.sh  build_occplug.sh  build_updater.sh
packaging/windows/: build_stub.sh  build_updater.sh
runtime/ccsp/: AGENTS.md  Makefile.am  configure.ac
runtime/ccsp/kernel/: Makefile.am  aarch64_cif.S  bsyscalls.c  deadlock.c  debug_entry.c  dynproc.c  entry.c  gdb_cift1.gdb  i386_cif.S  sched.c  signal_debug.c  stats.c  x64_cif.S
runtime/libkrocif/: Makefile.am  configure.ac
runtime/libkrocif/include/: spunixhdr.h
runtime/libkrocif/io/: Makefile.am  input.occ  io.c
runtime/libkrocif/rts/: Makefile.am  cif.c  occam_entry.c  rtsmain.c  userproc.c
runtime/libkrocif/support/: spinterf.c  spunix.c
runtime/libtvm/: configure.ac
stdlib/dynproc/examples/: Makefile.am
stdlib/random/examples/: configure.ac
test/: build  justskip.occ  loop  test  test.occ  test_bounds  test_bounds.occ  test_hello.occ  test_hex.occ  test_proc
tests/cgtests/: .gitignore  Makefile  Makefile.am  cglib.occ  cgmain.occ  cgtest100.occ  cgtest17.occ  cgtest19.occ  cgtest68.occ  cgtest69.occ  cgtest90.occ  cgtest93.occ  cgtest94.occ  cgtest96.occ  cgtest97.occ  cgtest98.occ  cgtest99.occ  configure.ac  run-tests
tests/hereticc/: Makefile.am  configure.ac
tests/occbench/: configure.ac
tests/occbench/benchmarks/: Makefile.am
tests/trivial/: justskip  loop.occ  skip_no_loop.occ  test_hello  test_hex  test_nested  test_nested.occ  test_params  test_params.occ  test_proc.occ  test_proc_test  test_s1  test_s1.occ
tools/brickload/: configure.ac
tools/ilibr/: configure.ac
tools/ilibr/tcofflib/: tcoff_io.c
tools/kroc/: AGENTS.md  kroc  kroc.in  occbuild.in
tools/mkoccdeps/: configure.ac
tools/occ21/: AGENTS.md  Makefile.am  configure.ac
tools/occamdoc/: configure.ac  occamdoc  occamdoc.in
tools/tenctool/: configure.ac
tools/tinyswig/: configure.ac
tools/tranx86/: AGENTS.md  Makefile.am  arch386.c  archaarch64.c  archaarch64.h  archx64.c  asm386.c  asm386.c.fixed  asmppc.c  asmsparc.c  configure.ac  debug_tranx86.lldb  elf.c  etcdump.c  etcrtl.c  machine.h  main.c  optimise.c  proc_desc.h  regcolour.c  rtldump.c  rtlops.c  structs.h  support.c  tceread.c  trancomm.h  transputer.h  tstack.c  tstack.h  tstate.c  tstate.h
translator/tranx86/: Makefile.am  arch386.c  archaarch64.c  archppc.c  archsparc.c  archx64.h  asmmips.c  etcops.c  etcrtl.c  main.c  netcread.c  proc_desc.h  regcolour.c  rtlops.c  support.c  tcedump.c  tceread.h  transputer.h  tstack.c
tvm/arduino/: Makefile.am  configure.ac
tvm/libtvm/: Makefile.am
tvm/nxt/: Makefile.am  configure.ac
tvm/posix/: configure.ac
(+377 files in other folders)
